testing/tests/ui/empty-match.stderr
error: `match` nodes must contain at least one `when` node and/or an `else` case
 --> <source attribute>:1:2
       " match true %}{% endmatch %}"
 --> tests/ui/empty-match.rs:4:21
  |
4 | #[template(source = "{% match true %}{% endmatch %}", ext = "html")]
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
